--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,37 @@
 {
+  "importMap": "./import_map.json",
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch -A src/main.ts"
+  },
+  "compilerOptions": {
+    "allowJs": true,
+    "lib": ["deno.window"],
+    "strict": true
+  },
+  "lint": {
+    "files": {
+      "include": ["src/"]
+    },
+    "rules": {
+      "tags": ["recommended"]
+    }
+  },
+  "fmt": {
+    "files": {
+      "include": ["src/"]
+    },
+    "options": {
+      "useTabs": false,
+      "lineWidth": 110,
+      "indentWidth": 4,
+      "semiColons": true,
+      "singleQuote": true,
+      "proseWrap": "preserve"
+    }
+  },
+  "test": {
+    "files": {
+      "include": ["src/"]
+    }
   }
 }
