--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,7 +6,9 @@
   "compilerOptions": {
     "allowJs": true,
     "lib": ["deno.window"],
-    "strict": true
+    "strict": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "@/lib"
   },
   "lint": {
     "files": {
