--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,8 @@
 {
   "importMap": "./import_map.json",
   "tasks": {
-    "dev": "deno run --watch=src/ -A src/main.ts"
+    "dev": "ENV=dev deno run --watch=src/ -A src/main.ts",
+    "start": "deno run -A src/main.ts"
   },
   "compilerOptions": {
     "allowJs": true,
